--- a/positionstyles.css
+++ b/positionstyles.css
@@ -2,102 +2,126 @@
 /* Activity 1 styles */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
-
+display: grid;
+grid-template-columns: 1fr 1fr;
+justify-items: center;
+grid-gap: 20px;
 }
 .red1 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
-
+  grid-column: 1/3;
 } 
 .green1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
 
 } 
 .yellow1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue1 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1/3; 
 } 
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
 }
 .red2 {
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px; 
   background-color: red; 
 } 
 .green2 { 
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px;
+  margin-left: 75px;
+  margin-top: -75px; 
   background-color: green; 
 } 
 .yellow2 {
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px;
+  margin-left: 150px;
+  margin-top: -75px; 
+ 
   background-color: gold; 
 } 
 .blue2 {
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px;
+  margin-left: 225px;
+  margin-top: -75px;
   background-color: blue; 
 } 
 /* Activity 3 styles */ 
 .content3 {
-  /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  grid-gap: 0 80px;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/3; 
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: green;
+  grid-column: 1/2;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 100%; 
+  height: 200px; 
+  background-color: gold;
+  grid-column: 2/3; 
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1/3; 
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   height: 400px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  width: 100%; 
+  height: 300%; 
+  background-color: red;
+  grid-column: 1/2; 
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  width: 100%; 
+  height: 100%; 
+  background-color: green;
+  grid-column: 2/3; 
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 100%; 
+  height: 100%; 
+  background-color: gold;
+  grid-column: 2/3; 
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 100%; 
+  height: 100%; 
+  background-color: blue;
+  grid-column: 2/3; 
 } 
 /* Activity 5 styles */ 
 .content5 {
@@ -105,50 +129,68 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  float: left;
+  width: 150px; 
+  height: 150px; 
   background-color: green; 
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  height: 600px;
+  width:600px;
+  margin:auto
   /* This is the parent of the activity 6 boxes. */
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  width: 400px; 
+  height: 200px; 
+  background-color: red;
+  grid-column: 1/5;
+  grid-row: 1/3;
+  z-index: -1; 
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  width: 200px; 
+  height: 200px; 
+  background-color: green;
+  grid-column: 1/3;
+  grid-row: 5/7;
+  z-index: 1; 
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 200px; 
+  height: 400px; 
+  background-color: gold;
+  grid-column: 5/7;
+  grid-row: 3/7;
+  z-index: 2; 
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 400px; 
+  height: 400px; 
+  background-color: blue;
+  grid-column: 2/6;
+  grid-row: 2/6;
+  z-index: 0; 
 } 
 
 
